TFP-1616 Feature/merge TFP-1616 fra fpsak for håndtering av historiske aksjonspunkt (#18)
* Merge fra fpsak commit 96db6e7f1fd. Håndtering av aksjonspunktRepository events

* Merge commit 0296ccb8be1 manuelt fra fpsak